--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "utils4taro",
-  "version": "1.0.4",
-  "main": "index.js",
+  "version": "1.0.6",
+  "main": "src/index.ts",
   "license": "MIT",
+  "homepage": "https://github.com/kbrownehs18/utils4taro",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kbrownehs18/utils4taro.git"
+  },
   "scripts": {
     "test": "jest"
   },
